<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/scroll_container"
    tools:context=".history.AlertDoctorFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26"
            app:srcCompat="@drawable/logo" />
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.193"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_1" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/bold_font"
            android:text="History"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:tabMode="fixed"
            android:background="@color/white"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/black"
            app:barrierMargin="2dp"
            app:tabTextAppearance="@style/tab_text"
            app:tabBackground="@drawable/tab_selector"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Week" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Month" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Year" />
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/btnScrollUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:background="@drawable/rounded_bg"
            android:padding="3dp"
            app:srcCompat="@drawable/ic_arrow_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>