...
            android:onClick="scanbt"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:translationY="-15dp"
            android:translationZ="30dp">
            <ImageView
                android:id="@+id/scanButton"
                android:layout_width="81dp"
                android:layout_height="67dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:background="@drawable/scan_button_background"
                android:src="@drawable/contactless"
...
